Add rest members